180725
	- mixref.pdf: CP-M, XEQ instruction added
	- run.c: added CP-M, XEQ, check configuration flags
	- io.c: interrupt facility flag removed
	- main.c: usage, mix_config flags
180718
	- run.c: CPU trace, status display fixed, indirect addressing
	- mixref.pdf: JrE, JrO, NEG, XCH, SLB, SRB, OR, XOR, AND added
	- opcodes, cell.c, run.c: several UT-MIX extensions added

180717
	- mixref.pdf: INT instruction added
	- io.c, main.c, opcodes, run.c: interrupt facility added
	- io.c: bad busy time condition fixed

180124AP
        - io.c: tape IOC time calculation

180123AP
        - mixref.pdf: octal codes
        - io.c: low end Burroughs B5500 peripheral timing
                tyme is 2us access time for B461 memory module
                drum restricted to   64 blocks (6,400W)
                tape restricted to 7680 blocks (7,680,000W)

180118AP
        - io.c, run.c: track idle time waiting for I/O to complete
        - run.c: instruction execution trace, memory dump

180118AP
        - run.c: memory_fetch/store, safe_fetch/store checks incomplete I/O
                 MOV changes elapsed_time, do_scheduled_io() takes into account
        - symbol.c: MinGW has stricmp()
        - io.c: buffers are protected for write/read access
                output operation locks buffer for READ
                input operation locks buffer for WRITE
                buffers cannot overlap, except for output operations
                safe_fetch/store enforces this access for the MIX CP as well

180117AP
        - io.c: go device, reader/punch/printer could redirected to files
                only tape/disk/drum device files contains device numbers
        - run.c: go device support, execute IN 0(U), start from 0
        - main.c: switches
                -g device       set GO device
                -h              help
                -r              redirect reader/punch/printer to files
        - run.c,io.c: busy I/O devices, simulated I/O time